test/pass/classes/static_within_class.lly
class Point(x: integer, y: integer)
{
    var @x = x
    var @y = y
    define f {}
}

class Point3d(x: integer, y: integer, z: integer) < Point(x, y)
{
    Point::f(self)
}

