test/fail/classes/self_get_property.lly
#[
SyntaxError: Use @<name> to get/set properties, not self.<name>.
    from self_get_property.lly:9
]#

class Point(x: integer, y: integer) {
    var @x = x
    var @y = self.x
}
